--- a/fonts.css
+++ b/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Futura Book';
-  src: url('Futura Book.otf') format('opentype');
+  src: url('futura-book.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
