--- a/fonts.css
+++ b/fonts.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: 'Bembo STD';
-  src: url('Bembo Std Regular.otf') format('opentype');
+  src: url('bsr.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
